# solbal

./: Cargo.toml  README.md  justfile
config/: balances.yaml  client.yaml
