[package]
name = "solana-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
backoff = { version = "0.4.0", features = ["tokio"] }
bs58 = "0.5.1"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.11"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "fs"] }
tonic = "0.12.3"
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = { version = "6.1.0", features = ["plugin"] }
